# Window2Clear

./: .gitignore  README.md
Window2Clear/: Window2Clear.cpp
Window2Clear-rs/: Cargo.toml
Window2Clear-rs/src/: main.rs
